--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 
 services:
   app:
-    build: .
+    build: 
+     context: .
+     dockerfile: ./Dockerfile
     ports:
       - 60:4000
